Run consistencyCheck after each test method in DenseNodeConcurrencyIT
Isolating failing test